pfb/hls_pfb/hls_pfb/logs/hls_run_cosim_103543.backup.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls_pfb.hlsrun_cosim_summary, at Thu Jan  8 19:38:35 2026
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run cosim -work_dir /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb -config /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg -cmdlineconfig /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/config.cmdline

****** Vitis HLS - High-Level Synthesis from C, C++ and OpenCL v2023.2 (64-bit)
  **** SW Build 4023990 on Oct 11 2023
  **** IP Build 4028589 on Sat Oct 14 00:45:43 MDT 2023
  **** SharedData Build 4025554 on Tue Oct 10 17:18:54 MDT 2023
    ** Copyright 1986-2022 Xilinx, Inc. All Rights Reserved.
    ** Copyright 2022-2023 Advanced Micro Devices, Inc. All Rights Reserved.

source /tools/Xilinx/Vitis_HLS/2023.2/scripts/vitis_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/tools/Xilinx/Vitis_HLS/2023.2/bin/unwrapped/lnx64.o/vitis_hls'
INFO: [HLS 200-10] For user 'brett' on host 'brett-System-Product-Name' (Linux_x86_64 version 6.17.13-zabbly+) on Thu Jan 08 19:38:35 PST 2026
INFO: [HLS 200-10] On os Ubuntu 22.04.5 LTS
INFO: [HLS 200-10] In directory '/home/brett/Documents/FX_Correlator/pfb/hls_pfb'
WARNING: [HLS 200-40] Environment variable 'C_INCLUDE_PATH' is set to /usr/include/x86_64-linux-gnu:.
WARNING: [HLS 200-40] Environment variable 'CPLUS_INCLUDE_PATH' is set to /usr/include/x86_64-linux-gnu:.
INFO: [HLS 200-1909] Reading HLS ini file /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg
INFO: [HLS 200-1909] Reading HLS ini file /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/config.cmdline
INFO: [HLS 200-2005] Using work_dir /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb 
INFO: [HLS 200-1510] Running: open_project /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb -diskless 
INFO: [HLS 200-1510] Running: open_solution hls 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2023.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1510] Running: apply_ini /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg 
INFO: [HLS 200-1909] Reading HLS ini file /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg
INFO: [HLS 200-1465] Applying ini 'syn.file=pfb.cpp' at /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/home/brett/Documents/FX_Correlator/pfb/hls_pfb/pfb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/brett/Documents/FX_Correlator/pfb/hls_pfb/pfb.h' at /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file '/home/brett/Documents/FX_Correlator/pfb/hls_pfb/pfb.h' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=pfb_tb.cpp' at /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg(5)
INFO: [HLS 200-10] Adding test bench file '/home/brett/Documents/FX_Correlator/pfb/hls_pfb/pfb_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=pfb_multichannel_decimator' at /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg(4)
INFO: [HLS 200-1465] Applying ini 'part=xc7z045ffg900-2' at /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z045-ffg900-2'
INFO: [HLS 200-1465] Applying ini 'clock=10ns' at /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg(6)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'csim.ldflags=-B/usr/lib/x86_64-linux-gnu/' at /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_config.cfg(7)
INFO: [HLS 200-1510] Running: apply_ini /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/config.cmdline 
INFO: [HLS 200-1909] Reading HLS ini file /home/brett/Documents/FX_Correlator/pfb/hls_pfb/hls_pfb/hls/config.cmdline
INFO: [HLS 200-1510] Running: cosim_design 
INFO: [COSIM 212-47] Using XSIM for RTL simulation.
INFO: [COSIM 212-14] Instrumenting C test bench ...
   Build using "/tools/Xilinx/Vitis_HLS/2023.2/tps/lnx64/gcc-8.3.0/bin/g++"
   Compiling apatb_pfb_multichannel_decimator.cpp
   Compiling apatb_pfb_multichannel_decimator_util.cpp
   Compiling pfb.cpp_pre.cpp.tb.cpp
   Compiling pfb_tb.cpp_pre.cpp.tb.cpp
/home/brett/Documents/FX_Correlator/pfb/hls_pfb/pfb_tb.cpp:237:2: error: ‘N’ does not name a type
     } else {
  ^
make: *** [cosim.tv.mk:76: obj/pfb_tb.cpp_pre.cpp.tb.o] Error 1
ERROR: [COSIM 212-317] C++ compile error.
ERROR: [COSIM 212-321] EXE file generate failed.
ERROR: [COSIM 212-321] EXE file generate failed.
ERROR: [COSIM 212-331] Aborting co-simulation: C simulation failed, compilation errors.
ERROR: [COSIM 212-5] *** C/RTL co-simulation file generation failed. ***
ERROR: [COSIM 212-4] *** C/RTL co-simulation finished: FAIL ***
INFO: [HLS 200-111] Finished Command cosim_design CPU user time: 4.74 seconds. CPU system time: 0.39 seconds. Elapsed time: 5.13 seconds; current allocated memory: 20.688 MB.
INFO: [HLS 200-1510] Running: close_project 
ERROR: 
INFO: [HLS 200-112] Total CPU user time: 5.48 seconds. Total CPU system time: 0.47 seconds. Total elapsed time: 5.86 seconds; peak allocated memory: 294.871 MB.
INFO: [Common 17-206] Exiting vitis_hls at Thu Jan  8 19:38:41 2026...
